// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Grid col 1`] = `
Array [
  <span
    class="css-1bdt3um-PlaceholderInline ea0irds1"
    color="silver"
  />,
  <div
    class="css-14cpgt7-Container ecq4n7c0"
  >
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
  </div>,
  <span
    class="css-1bdt3um-PlaceholderInline ea0irds1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid col outer 1`] = `
Array [
  <span
    class="css-1bdt3um-PlaceholderInline ea0irds1"
    color="silver"
  />,
  <div
    class="css-1ufl575-Container ecq4n7c0"
  >
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
    <span
      class="css-ol8bih-PlaceholderInline ea0irds1"
    />
  </div>,
  <span
    class="css-1bdt3um-PlaceholderInline ea0irds1"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row 1`] = `
Array [
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
  <div
    class="css-1mvfu07-Container ecq4n7c0"
  >
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
  </div>,
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row multiply 1`] = `
Array [
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
  <div
    class="css-tch0nx-Container ecq4n7c0"
  >
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
  </div>,
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
]
`;

exports[`Storyshots Components|Grid row outer 1`] = `
Array [
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
  <div
    class="css-1lrgwpd-Container ecq4n7c0"
  >
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
    <div
      class="css-19zkc89-PlaceholderBlock ea0irds0"
    />
  </div>,
  <div
    class="css-sekvhc-PlaceholderBlock ea0irds0"
    color="silver"
  />,
]
`;
